Fix excel color button in services records

--- a/shape/static/shape/css/mapBase.css
+++ b/shape/static/shape/css/mapBase.css
@@ -72,3 +72,7 @@
     line-height: 1.5; /* If Placeholder of the input is moved up, rem/modify this. */
     border-radius: 3px;
 }
+
+.leaflet-container a.btn-success{
+    color: #ffffff;
+}
