--- a/templates/help/modal/modal_shape.html
+++ b/templates/help/modal/modal_shape.html
@@ -12,6 +12,7 @@
                 {{ modal_body }}
                 {% table "shapeDetail" 9 %}
             </div>
+            <div class="row"></div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
                 {% if show_ok_button %}
