--- a/shape/static/shape/css/mapBase.css
+++ b/shape/static/shape/css/mapBase.css
@@ -95,5 +95,10 @@
 }
 
 #timePeriodButton {
-    float:right;
+    float: right;
+}
+
+.select2-selection--multiple {
+    max-height: 60px;
+    overflow: auto
 }
