--- a/profile/templates/profile/byExpedition.html
+++ b/profile/templates/profile/byExpedition.html
@@ -7,6 +7,13 @@
     {{ block.super }}
     <link href="{% static "components/leaflet/dist/leaflet.css" %}" rel="stylesheet">
     <link href="{% static "components/BeautifyMarker/leaflet-beautify-marker-icon.css" %}" rel="stylesheet">
+    {% with "components/gentelella/vendors/" as gentelella_static %}
+        <link href="{% static gentelella_static|add:"ion.rangeSlider/css/ion.rangeSlider.css" %}" rel="stylesheet">
+        <link href="{% static gentelella_static|add:"ion.rangeSlider/css/ion.rangeSlider.skinModern.css" %}"
+        rel="stylesheet">
+        {# switchery: pretty checkboxes #}
+        <link href="{% static gentelella_static|add:"switchery/dist/switchery.min.css" %}" rel="stylesheet">
+    {% endwith %}
 {% endblock %}
 
 {% block content %}
@@ -28,6 +35,7 @@
         {% table "expeditionDetail" 7 as expeditionTable %}
         {% panel "fa-truck" 'Expediciones (<strong id="expeditionNumber2">N</strong>)' expeditionTable info_target_id="tableHelp" as panel5 %}
         {% columns 12 12 12 panel5 %}
+
     </div>
 
     {% include "help/modal/explanation/profile/by_route/filter.html" with modal_id="filterHelp" %}
@@ -40,6 +48,9 @@
     {{ block.super }}
     {% with "components/gentelella/vendors/" as gentelella_static %}
         <script src="{% static gentelella_static|add:"jquery-sparkline/dist/jquery.sparkline.min.js" %}"></script>
+        <script src="{% static gentelella_static|add:"ion.rangeSlider/js/ion.rangeSlider.min.js" %}"></script>
+        {# switchery: pretty checkboxes #}
+        <script src="{% static gentelella_static|add:"switchery/dist/switchery.min.js" %}"></script>
     {% endwith %}
     <script src="{% static "components/leaflet/dist/leaflet.js" %}"></script>
     <script src="{% static "components/leaflet-polylinedecorator/dist/leaflet.polylineDecorator.js" %}"></script>
