add boardingWithAlightingPercentage to visualization

--- a/profile/templates/profile/byExpedition.html
+++ b/profile/templates/profile/byExpedition.html
@@ -24,7 +24,7 @@
 
     <div class="row">
         {% tabs tabs.header tabs.content as profile_tabs %}
-        {% panel "fa-bar-chart" "Perfil de carga <small>con <strong id='expeditionNumber'>N</strong> expediciones</small>" profile_tabs info_target_id="chartHelp" as panel4 %}
+        {% panel "fa-bar-chart" "Perfil de carga <small>con <strong id='expeditionNumber'>N</strong> expediciones y <strong id='boardingWithAlightingPercentage'>N</strong> % de estimación de bajada</small>" profile_tabs info_target_id="chartHelp" as panel4 %}
         {% columns 12 12 12 panel4 %}
     </div>
 
