Add scrollX and responsive datatable

--- a/shape/static/shape/css/mapBase.css
+++ b/shape/static/shape/css/mapBase.css
@@ -88,12 +88,9 @@
 .route {
     width: 180px !important;
 }
-
 .modal-lg {
-    width: 1600px;
-!important;
+    width: 80%;
 }
-
 #timePeriodButton {
     float: right;
 }
