--- a/postproducts/templates/postproducts/transfers.html
+++ b/postproducts/templates/postproducts/transfers.html
@@ -15,7 +15,7 @@
     {% include "datamanager/availableDays.html" with info_target_id="dayHelp" %}
     {% include "admin/date_range_modal.html" with modal_id="dateRangeModal" show_save_button="True" %}
 
-    {% postproducts_data_filter data_filter True True True info_target_id="filterHelp" export_button_1_label='Descargar datos por día' export_button_2_label='Descargar datos promediados' %}
+    {% postproducts_data_filter data_filter True True True info_target_id="filterHelp" export_button_1_label='Descargar datos agrupados por periodo' export_button_2_label='Descargar datos agrupados por día' %}
 
     {% include "help/modal/explanation/profile/by_route/filter.html" with modal_id="filterHelp" %}
     {{ block.super }}
