--- a/speed/templates/speed/matrix.html
+++ b/speed/templates/speed/matrix.html
@@ -5,7 +5,7 @@
 
 {% block css %}
     {{ block.super }}
-    <link href="{% static "components/leaflet/dist/leaflet.css" %}" rel="stylesheet">
+    <link href="{% static "css/mapbox-gl.css" %}" rel="stylesheet">
     {% with "components/gentelella/vendors/" as gentelella_static %}
         <link href="{% static gentelella_static|add:"ion.rangeSlider/css/ion.rangeSlider.css" %}" rel="stylesheet">
         <link href="{% static gentelella_static|add:"ion.rangeSlider/css/ion.rangeSlider.skinModern.css" %}" rel="stylesheet">
@@ -68,10 +68,10 @@
 
 {% block js %}
     {{ block.super }}
-    <script src="{% static "components/leaflet/dist/leaflet.js" %}"></script>
-    <script src="{% static "components/leaflet-polylinedecorator/dist/leaflet.polylineDecorator.js" %}"></script>
     {% with "components/gentelella/vendors/" as gentelella_static %}
         <script src="{% static gentelella_static|add:"ion.rangeSlider/js/ion.rangeSlider.min.js" %}"></script>
     {% endwith %}
+    <script src="{% static "js/mapbox-gl.js" %}"></script>
+    <script src="{% static "trip/js/map.js" %}"></script>
     <script src="{% static "speed/js/matrix.js" %}"></script>
 {% endblock %}
