--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -126,7 +126,7 @@
                   </li>
                 {% endif %}
                 <li>
-                    <a><i class="fa fa-save"></i> Extraer datos <span
+                    <a><i class="fa fa-save"></i> Productos post. <span
                         class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                         <li><a href=" {% url "postproducts:transfers" %} "> Transbordos por parada</a></li>
