refactoring to route map view

--- a/shape/templates/shape/mapBase.html
+++ b/shape/templates/shape/mapBase.html
@@ -24,6 +24,7 @@
 {% endblock %}
 
 {% block content %}
+    <div id="mapid" style="width: 100%"></div>
     <div id="modalList">
         {% include "help/modal/modal_shape.html" with show_ok_button=True modal_id="shape_info" modal_title="Datos sobre ruta" modal_body="" %}
         {% include "help/modal/modal.html" with show_ok_button=True modal_id="modal" modal_title="Eliminar ruta" modal_body="¿Está seguro que quiere eliminar la ruta?" %}
