replace leaflet with mapboxgl in trip/large-trip view

--- a/trip/templates/trip/large.html
+++ b/trip/templates/trip/large.html
@@ -5,7 +5,7 @@
 
 {% block css %}
     {{ block.super }}
-    <link href="{% static "components/leaflet/dist/leaflet.css" %}" rel="stylesheet">
+    <link href="{% static "css/mapbox-gl.css" %}" rel="stylesheet">
     {% with "components/gentelella/vendors/" as gentelella_static %}
         <link href="{% static gentelella_static|add:"ion.rangeSlider/css/ion.rangeSlider.css" %}" rel="stylesheet">
         <link href="{% static gentelella_static|add:"ion.rangeSlider/css/ion.rangeSlider.skinModern.css" %}"
@@ -43,13 +43,12 @@
 
 {% block js %}
     {{ block.super }}
-    <script src="{% static "components/leaflet/dist/leaflet.js" %}"></script>
     {% with "components/gentelella/vendors/" as gentelella_static %}
         <script src="{% static gentelella_static|add:"ion.rangeSlider/js/ion.rangeSlider.min.js" %}"></script>
         {# switchery: pretty checkboxes #}
         <script src="{% static gentelella_static|add:"switchery/dist/switchery.min.js" %}"></script>
     {% endwith %}
-
+    <script src="{% static "js/mapbox-gl.js" %}"></script>
     <script src="{% static "trip/js/map.js" %}"></script>
     <script src="{% static "trip/js/largeTripApp.js" %}"></script>
 {% endblock %}
