--- a/shape/templates/shape/mapBase.html
+++ b/shape/templates/shape/mapBase.html
@@ -26,9 +26,9 @@
 {% block content %}
     <div id="mapid" style="width: 100%"></div>
     <div id="modalList">
-        {% include "help/modal/modal_shape.html" with show_ok_button=True modal_id="shape_info" modal_title="Datos sobre ruta" modal_body="" %}
-        {% include "help/modal/modal.html" with show_ok_button=True modal_id="modal" modal_title="Eliminar ruta" modal_body="¿Está seguro que quiere eliminar la ruta?" %}
+        {% include "help/modal/modal_shape.html" with show_ok_button=True modal_id="shape_info" modal_title="Datos operacionales" modal_body="" %}
         {% include "help/modal/explanation/shape/map.html" with modal_id="helpModal" %}
+        {% include "help/modal/modal.html" with show_ok_button=True modal_id="routeListModal" modal_title="Rutas en mapa" modal_body="<div class='row'><div class='col-lg-12'><button id='addRouteButton' class='btn btn-default btn-sm'><span class='fa fa-plus' aria-hidden='true'></span> Agregar ruta</button></div></div><div class='row' ><div class='col-lg-12'><table class='table table-condensed'><thead><th></th><th>Fecha PO</th><th>Servicio</th><th>Servicio TS</th><th></th><th></th><th></th><th></th</thead><tbody id='routeListContainer'></tbody></table></div></div>" %}
     </div>
 {% endblock %}
 
