improvement logic to show routes

--- a/shape/static/shape/css/mapBase.css
+++ b/shape/static/shape/css/mapBase.css
@@ -135,3 +135,21 @@
 #layerGroupContainer a.active:hover {
     background: #3074a4;
 }
+
+#listControl {
+    padding: 0px;
+}
+
+@media print {
+    .noprint {
+        visibility: hidden;
+    }
+
+    .mapboxgl-ctrl-attrib-inner {
+        visibility: hidden;
+    }
+
+    .mapboxgl-ctrl-logo {
+        visibility: hidden;
+    }
+}
